WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312786
[:has() perf] Include full selector context to :has() invalidation selectors
https://bugs.webkit.org/show_bug.cgi?id=312786
Summary
[:has() perf] Include full selector context to :has() invalidation selectors
Antti Koivisto
Reported
2026-04-20 10:29:58 PDT
.foo:has(.bar) .baz -> .foo .bar
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-20 10:30:14 PDT
<
rdar://problem/175177078
>
Antti Koivisto
Comment 2
2026-04-20 10:48:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63132
EWS
Comment 3
2026-04-20 21:32:52 PDT
Committed
311642@main
(e5380247bac6): <
https://commits.webkit.org/311642@main
> Reviewed commits have been landed. Closing PR #63132 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug